--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "pawaox4th@gmail.com",
   "license": "MIT",
   "scripts": {
-    "dev": "tsc"
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   }
 }
