--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
+    "prettier": "2.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   }
