--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
+    "@types/node-fetch": "^2.6.2",
     "prettier": "2.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "axios": "^1.2.1",
+    "node-fetch": "2"
   }
 }
